feat: data_erasing.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ ___RESULT TRAIN 1/data/**
 ___RESULT TRAIN 2/data
 __DATASET FOR TRAIN 1
 __DATASET FOR TRAIN 2
+__DATASET FOR TRAIN 3
 data
 data_images_for_train_1
 data_images_for_train_2
